--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
         android:icon="@mipmap/icon_chat"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".MyApplication"
+        android:name=".NimApplication"
         android:theme="@style/AppTheme">
 
         <activity android:name=".WelcomeActivity"
@@ -106,6 +106,8 @@
 
         <activity android:name=".ui.main.MainActivity"/>
         <activity android:name=".ui.login.LoginActivity"/>
+        <activity android:name=".ui.profile.AccountProfileActivity"/>
+        <activity android:name=".ui.profile.EditAccountProfileActivity"/>
     </application>
 
 </manifest>
