--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,6 @@ dependencies {
     implementation 'com.android.support:design:26.0.2'
     implementation 'com.android.support:cardview-v7:26.0.2'
 
-        implementation project(':uikit')
+    implementation project(':uikit')
+    compile 'com.dingmouren.paletteimageview:paletteimageview:1.0.7'
 }
