--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -108,6 +108,7 @@
         <activity android:name=".ui.login.LoginActivity"/>
         <activity android:name=".ui.profile.AccountProfileActivity"/>
         <activity android:name=".ui.profile.EditAccountProfileActivity"/>
+        <activity android:name=".ui.search.SearchActivity"/>
     </application>
 
 </manifest>
