--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -106,7 +106,7 @@
 
         <activity android:name=".ui.main.MainActivity"/>
         <activity android:name=".ui.login.LoginActivity"/>
-        <activity android:name=".ui.login.RegistActivity"/>
+        <activity android:name=".ui.regist.RegistActivity"/>
         <activity android:name=".ui.profile.AccountProfileActivity"/>
         <activity android:name=".ui.profile.EditAccountProfileActivity"/>
         <activity android:name=".ui.search.SearchActivity"/>
